<resources>
    <string name="app_name">Food Delivery</string>

    <string name="facebook_app_id">581033482823166</string>
    <string name="fb_login_protocol_scheme">fb581033482823166</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="channel_name">Test Channel</string>
    <string name="channel_description">Test Channel Description</string>

    <string name="action_settings">Settings</string>
    <string name="aboutus1">Quality food is our resolve, committed service is our culture and satisfied customer is our objective!</string>
    <string name="aboutus2">Our Services are fast emerging as a prominent player in corporate and retail food service, contract catering and allied industries. Hunger Hunt is best placed to serve customers with wide variety of offerings. Our commitment to customer satisfaction, quality food and value Product makes us stand out from the crowd, helping us carve new milestones in the food service industry.</string>
    <string name="aboutus3">Backed by Share India group, a leading name in financial service industry, our diversified business interests include in-house-developed brands, integrated contract catering and Support Services. To better cater to our customers, we have hired chefs with over 15 years of experience and expertise in entire spectrum of Indian cuisine.</string>
    <string name="aboutus4">Our Values:\n
        Food service is not just business but our passion.
</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgotpass">We just need your registered Email address to send you password reset instructions.</string>
    <string name="emptycart"><b>Your Cart is empty.</b>\n Your Cart lives to serve. Give it purpose fill it with Food. \n\n Continue Ordering or visit your Favourite Section.</string>
    <string name="title_activity_checkout">Checkout</string>
    <string name="emptyfav">No favorites items to display.\nPlease go back and add your favorite foods to access them easily.</string>
    <string name="sign_up">SIGN UP</string>
    <string name="string_divder">|</string>
    <string name="string_placeOrder">Place Order</string>
    <string name="restaurants">Restaurants</string>
    <string name="food_search">Food Search</string>
    <string name="name">NAME</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="address">ADDRESS</string>
    <string name="zip_code">ZIP CODE</string>
    <string name="city">CITY</string>
    <string name="view_details">View Details</string>
    <string name="quantity_of_item">Quantity of item</string>
    <string name="price_of_item">Price of Item</string>
    <string name="name_of_food">Name of food</string>
    <string name="image_of_food">Image of Food</string>
    <string name="transaction_id">Transaction Id</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="image_of_restaurant">Image of restaurant</string>
    <string name="price">Price</string>
    <string name="remove">Remove</string>
    <string name="congratulations_your_order_is_accepted">Congratulations! Your order is accepted.</string>
    <string name="thank_you">Thank you for your purchase! Your items are on the way and should arrive shortly.</string>
    <string name="continue_ordering">Continue Ordering</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="order_date">Order date</string>
    <string name="total_amount">Total Amount:</string>
    <string name="chat">Chat</string>
    <string name="inbox">Inbox</string>
    <string name="lt_lt_back"><![CDATA[<< Back]]></string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="forgot_password">Forgot Password?</string>

</resources>
