<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.MainScreenFragment.AboutFragment">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/about1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/aboutus1"
        android:textAlignment="textStart"
        android:textColor="@android:color/white"
        android:textSize="15dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/aboutus4"
        android:textAlignment="textStart"
        android:textColor="@android:color/white"
        android:textSize="15dp"
        android:layout_below="@+id/about2"
        android:layout_alignParentStart="true"
        android:gravity="start"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="15dp"
        android:padding="10dp"
        android:textAlignment="textStart"
        android:text="@string/aboutus2"
        android:id="@+id/textView8"
        android:layout_below="@+id/about1"
        android:layout_alignParentStart="true"
        android:gravity="start"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/about2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/aboutus3"
        android:textAlignment="textStart"
        android:textColor="@android:color/white"
        android:textSize="15dp"
        android:layout_below="@+id/textView8"
        android:layout_alignParentStart="true"
        android:gravity="start"
        android:layout_alignParentLeft="true" />

</RelativeLayout>

</FrameLayout>
