<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/forgotback"
    tools:context="com.example.fooddelivery.Activities.ForgotPasswordActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:src="@drawable/logo1" />

    <TextView
        android:id="@+id/forgotTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:fontFamily="serif"
        android:text="@string/forgot_password"
        android:textColor="@android:color/white"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/quote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgotTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="39dp"
        android:fontFamily="serif"
        android:text="@string/forgotpass"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/enteremail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/quote"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:backgroundTint="#007700"
        android:ems="10"
        android:hint="@string/enter_email_address"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textColorLink="@android:color/white" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enteremail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:background="@drawable/corner"
        android:text="@string/reset_password" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/submit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:text="@string/lt_lt_back"
        android:textColor="@android:color/white"
        android:textColorLink="@android:color/white" />
</RelativeLayout>
