<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent"
    tools:context="com.example.food__delivery.Activities.ThankYouPage">

    <TextView
        android:id="@+id/textView18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/marko_one"
        android:gravity="center_horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/congratulations_your_order_is_accepted"
        android:textAlignment="center"
        android:textColor="#008800"
        android:textSize="29sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView18"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:fontFamily="serif"
        android:gravity="center_horizontal"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:text="@string/thank_you"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/car"
        android:layout_below="@+id/textView23"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp"
        android:contentDescription="@string/thank_you" />

    <Button
        android:id="@+id/button16"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/continue_ordering"
        android:background="@drawable/corner"
        android:textColor="@android:color/white"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/imageView6"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
