<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.food__delivery.Fragment.CartFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true">


        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/recycler11"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true">

        </androidx.recyclerview.widget.RecyclerView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#008800"
            android:id="@+id/relative_layout"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true">

            <TextView
                android:id="@+id/textView28"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/string_placeOrder"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:layout_marginStart="96dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="96dp"
                android:layout_alignParentLeft="true"
                tools:ignore="RtlCompat" />

            <Button
                android:id="@+id/btn_placeOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_placeOrder" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/string_divder"
                android:textSize="25sp"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/textView28"
                android:layout_toRightOf="@+id/textView28" />

            <TextView
                android:id="@+id/textView_cartTotalPrice"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/textView13"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:padding="10dp"
                android:text="TextView" />

        </RelativeLayout>

        <TextView
            android:id="@+id/textView_cartEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/recycler11"

            android:layout_marginTop="109dp"
            android:fontFamily="cursive"
            android:lineSpacingExtra="8sp"
            android:padding="15dp"
            android:text="@string/emptycart"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:visibility="visible"
            android:layout_alignParentLeft="true"
            android:gravity="center_horizontal" />
    </RelativeLayout>
</FrameLayout>
